# resume_builder

./: .env  .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  DOCUMENTATION_INDEX.md  GEMINI_IMPLEMENTATION.md  GEMINI_QUICK_START.md  GEMINI_SECTION_EXTRACTION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROFILE_MANAGEMENT.md  QUICK_START.sh  README.md  TROUBLESHOOTING.md  ingest_profile.ipynb  requirements.txt  start.sh
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: profile.py  resume.py  runs.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: assembler.py  embeddings.py  ingest.py  llm.py  optimizer.py  orchestrator.py  pipeline.py  ratelimit.py  renderer.py
backend/app/storage/: faiss_store.py  profile_loader.py  store.py  vector_store.py
backend/app/utils/: text.py
frontend/app/: layout.tsx  page.tsx
frontend/components/: ApiKeyInput.tsx  ProfileIngest.tsx  ResultsPanel.tsx  ResumeGenerate.tsx
scripts/: setup_venv.sh
