[metadata]
name = rag-ats-backend
version = 0.1.0
description = RAG ATS backend

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    fastapi>=0.115.0
    uvicorn[standard]>=0.30.0
    pydantic>=2.7.0
    python-multipart>=0.0.9
    httpx>=0.27.0
    numpy>=1.26.0
    scikit-learn>=1.3.0
    jinja2>=3.1.0
    sentence-transformers>=3.0.0
    google-generativeai>=0.8.3

[options.packages.find]
where = .
